clang/test/BSC/Negative/SafeZone/unsafe_param_or_return_type/unsafe_param_or_return_type.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

safe int* funa(int *a);  // expected-error{{unsafe return type is forbidden in the safe function}}
                         // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}

safe int* funa(int *a) {  // expected-error{{unsafe return type is forbidden in the safe function}}
  return a;             // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

safe int* (*p)(int *a);  // expected-error{{unsafe return type is forbidden in the safe function}}
                         // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}

safe int funb(int arr[10]) {  // expected-error{{unsafe parameter type is forbidden in the safe function}}
  return 10;
}

union data {
  int a;
  char b;
};

safe union data func(union data a) {  // expected-error{{unsafe return type is forbidden in the safe function}}
  return a;                         // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

struct SA {
  int a;
};

safe struct SA fund(struct SA f) {
  return f;
}

struct SB {
  int *a;
};

safe struct SB fune(struct SB f) {  // expected-error{{unsafe return type is forbidden in the safe function}}
  return f;                       // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

struct SC {
  union data a;
};

safe struct SC funf(struct SC f) {   // expected-error{{unsafe return type is forbidden in the safe function}}
  return f;                       // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

struct SD {
  int arr[10];
};

safe struct SD fung(struct SD f) {
  return f;
}

struct SE {
  int (*arr)[10];
};

safe struct SE funh(struct SE f) {   // expected-error{{unsafe return type is forbidden in the safe function}}
  return f;                        // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

struct SF {
  int *arr[10];
};

safe struct SF funi(struct SF f) {   // expected-error{{unsafe return type is forbidden in the safe function}}
  return f;                        // expected-error@-1{{unsafe parameter type is forbidden in the safe function}}
}

safe int* owned funj(int* owned a) {
  return a;
}

struct SG {
  int* owned a;
};

safe struct SG funk(struct SG f) {
  return f;
}